--- a/kaggle/CIBMTR/phase3.ipynb
+++ b/kaggle/CIBMTR/phase3.ipynb
@@ -2,39 +2,473 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c7bb5c7",
+   "execution_count": 2,
+   "id": "b9b92a10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+      "numpy 1.26.4\n",
+      "pandas 2.2.3\n",
+      "polars 1.9.0\n",
+      "matplotlib 3.7.5\n",
+      "seaborn 0.12.2\n",
+      "lifelines 0.30.0\n",
+      "sklearn 1.2.2\n",
+      "lightgbm 4.5.0\n",
+      "xgboost 2.0.3\n",
+      "catboost 1.2.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import joblib\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import polars as pl\n",
+    "\n",
+    "import pandas.api.types\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import sklearn\n",
+    "\n",
+    "import lightgbm as lgb\n",
+    "import xgboost as xgb\n",
+    "import catboost as cb\n",
+    "\n",
+    "import lifelines\n",
+    "from lifelines.utils import concordance_index\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "print(sys.version)\n",
+    "for i in [np, pd, pl, mpl, sns, lifelines, sklearn, lgb, xgb, cb]:\n",
+    "    try:\n",
+    "        print(i.__name__, i.__version__)\n",
+    "    except:\n",
+    "        print(i.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "089b6927",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "skf = StratifiedKFold(5, random_state = 123, shuffle = True)\n",
-    "for train_idx, valid_idx in skf.split(df_train[X_all], df_train['efs']):\n",
-    "    df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
-    "    t1, t2 = (\n",
-    "        df_cv_train.loc[df_cv_train['efs'] == 0.0, 'efs_time'].quantile(0.025),\n",
-    "        df_cv_train.loc[df_cv_train['efs'] == 1.0, 'efs_time'].quantile(0.6)\n",
-    "    )\n",
-    "    df_cv_train = df_cv_train.assign(efs_b = np.nan)\n",
-    "    df_cv_train.loc[(df_cv_train['efs'] == 0.0) & (df_cv_train['efs_time'] > t1), 'efs_b'] = 0\n",
-    "    df_cv_train.loc[(df_cv_train['efs'] == 1.0) & (df_train['efs_time'] < t2), 'efs_b'] = 1\n",
-    "    df_train_b = df_cv_train.loc[df_cv_train['efs_b'].notna()]\n",
-    "    print(t1, t2, len(df_train_b), len(df_train) - len(df_train_b))\n",
-    "    clf_lgb = lgb.LGBMClassifier(verbose = -1, n_estimators = 500, learning_rate = 0.02, class_weight={0.0: 1.0, 1.0: 1.0})\n",
-    "    clf_lgb.fit(df_train_b[X_all], df_train_b['efs_b'], categorical_feature = X_nom)\n",
-    "    prd1 = clf_lgb.predict_proba(df_train_b[X_all])[:, 1]\n",
-    "    prd2 = clf_lgb.predict_proba(df_cv_train[X_all])[:, 1]\n",
-    "    prd3 = clf_lgb.predict_proba(df_valid[X_all])[:, 1]\n",
-    "    print(\n",
-    "        roc_auc_score(df_train_b['efs'], prd1),\n",
-    "        roc_auc_score(df_cv_train['efs'], prd2),\n",
-    "        roc_auc_score(df_valid['efs'], prd3),\n",
-    "        concordance_index(df_train_b['efs_time'], -pd.Series(prd1, index = df_train_b.index), df_train_b['efs']),\n",
-    "        concordance_index(df_cv_train['efs_time'], -pd.Series(prd2, index = df_cv_train.index), df_cv_train['efs']),\n",
-    "        concordance_index(df_valid['efs_time'], -pd.Series(prd3, index = df_valid.index), df_valid['efs'])\n",
-    "    )"
+    "import dproc, sgutil, sgpp, sgml, custpp\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import cross_validate, KFold, ShuffleSplit, train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from lifelines import NelsonAalenFitter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "361fb548",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/p2.joblib']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_path = 'data'\n",
+    "img_path = 'img'\n",
+    "result_path = 'result'\n",
+    "model_path = 'model'\n",
+    "\n",
+    "sc = sgutil.SGCache(img_path, result_path)\n",
+    "\n",
+    "X_4 = [\n",
+    "    'psych_disturb', 'diabetes', 'arrhythmia', 'renal_issue', 'pulm_severe', 'obesity', 'hepatic_severe', \n",
+    "    'prior_tumor', 'peptic_ulcer','rheum_issue', 'hepatic_mild', 'cardiac','pulm_moderate'\n",
+    "]\n",
+    "\n",
+    "X_int_fm = [\n",
+    "    'comorbidity_score', 'hla_high_res_10', 'hla_high_res_6', 'hla_high_res_8', 'hla_low_res_10',\n",
+    "    'hla_low_res_6', 'hla_low_res_8', 'hla_match_a_high', 'hla_match_a_low', 'hla_match_b_high',\n",
+    "    'hla_match_b_low', 'hla_match_drb1_low', 'hla_match_c_high', 'hla_match_c_low', 'hla_match_dqb1_high', 'hla_match_dqb1_low',\n",
+    "    'hla_match_drb1_high', 'hla_nmdp_6', 'karnofsky_score'\n",
+    "]\n",
+    "\n",
+    "X_2 = [\n",
+    "    ('graft_type', {'peripheral blood': 0, 'bone marrow': 1}),\n",
+    "    ('prod_type', {'pb': 0, 'bm': 1}),\n",
+    "    ('vent_hist', {'no': -1, 'yes': 1}),\n",
+    "    ('rituximab', {'no': -1, 'yes': 1}),\n",
+    "    ('mrd_hct', {'negative': -1, 'positive': 1}),\n",
+    "    ('in_vivo_tcd', {'no': -1, 'yes': 1}),\n",
+    "    ('melphalan_dose', {'n/a, mel not given': -1, 'mel': 1})\n",
+    "]\n",
+    "X_na = X_4 +  X_int_fm +  ['donor_age']\n",
+    "X_nom_na = ['cmv_status', 'conditioning_intensity', 'cyto_score', 'cyto_score_detail', 'donor_related',\n",
+    "    'dri_score', 'ethnicity', 'gvhd_proph', 'sex_match', 'tce_div_match', 'tce_imm_match', 'tce_match'\n",
+    "]\n",
+    "X_nom_nna = ['prim_disease_hct', 'race_group', 'tbi_status']\n",
+    "p2 = make_pipeline(\n",
+    "    sgpp.PolarsProcessor({'ID': pl.Int64}),\n",
+    "    sgpp.PandasCoverter(index_col = 'ID'),\n",
+    "    custpp.CIBMTTransformer(X_2, X_4, X_na, X_nom_na + X_nom_nna),\n",
+    "    sgpp.ApplyWrapper(SimpleImputer(strategy='most_frequent').set_output(transform='pandas'), X_int_fm, postfix = '_fm'),\n",
+    "    sgpp.ApplyWrapper(SimpleImputer(strategy='mean').set_output(transform='pandas'), ['donor_age'], postfix = '_fm'),\n",
+    "    sgpp.ApplyWrapper(sgpp.CatArrangerFreq(1, 'na', 'na'), X_nom_na),\n",
+    "    sgpp.ApplyWrapper(sgpp.CatOOVFilter(), X_nom_nna),\n",
+    ")\n",
+    "df_train = p2.fit_transform(['data/train.csv'])\n",
+    "joblib.dump(p2, os.path.join('model', 'p2.joblib'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9df6095a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_naf(df, time_col='efs_time', event_col='efs'):\n",
+    "    naf = NelsonAalenFitter()\n",
+    "    naf.fit(durations=df['efs_time'], event_observed=df['efs'])\n",
+    "    return naf.cumulative_hazard_at_times(df['efs_time']).values * -1\n",
+    "df_train['naf'] = get_naf(df_train, time_col='efs_time', event_col='efs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9ddafa59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_bool = ['graft_type', 'prod_type']\n",
+    "X_tri = [\n",
+    "    'arrhythmia', 'cardiac', 'diabetes', 'hepatic_mild', 'hepatic_severe',\n",
+    "    'in_vivo_tcd', 'melphalan_dose', 'mrd_hct', 'obesity', 'peptic_ulcer',\n",
+    "    'prior_tumor', 'psych_disturb', 'pulm_moderate', 'pulm_severe', 'renal_issue',\n",
+    "    'rheum_issue', 'rituximab', 'vent_hist'\n",
+    "]\n",
+    "X_nom = [\n",
+    "    'cmv_status', 'conditioning_intensity', 'cyto_score', 'cyto_score_detail', 'donor_related',\n",
+    "    'dri_score', 'ethnicity', 'gvhd_proph', 'prim_disease_hct', 'race_group', 'sex_match',\n",
+    "    'tbi_status', 'tce_div_match', 'tce_imm_match', 'tce_match'\n",
+    "]\n",
+    "X_na = [\n",
+    "    'arrhythmia_na', 'cardiac_na', 'diabetes_na', 'hepatic_mild_na', 'hepatic_severe_na',\n",
+    "    'obesity_na', 'peptic_ulcer_na', 'prior_tumor_na', 'psych_disturb_na', 'pulm_moderate_na',\n",
+    "    'pulm_severe_na', 'renal_issue_na', 'rheum_issue_na'\n",
+    "]\n",
+    "X_cont = ['age_at_hct', 'donor_age']\n",
+    "X_int = [\n",
+    "    'comorbidity_score', 'hla_high_res_10', 'hla_high_res_6', 'hla_high_res_8', 'hla_low_res_10',\n",
+    "    'hla_low_res_6', 'hla_low_res_8', 'hla_match_a_high', 'hla_match_a_low', 'hla_match_b_high',\n",
+    "    'hla_match_b_low', 'hla_match_drb1_low', 'hla_match_c_high', 'hla_match_c_low', 'hla_match_dqb1_high', 'hla_match_dqb1_low',\n",
+    "    'hla_match_drb1_high', 'hla_nmdp_6', 'karnofsky_score', 'year_hct'\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4ec4f07c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score(df, prds):\n",
+    "    return df.groupby('race_group', observed=True).apply(\n",
+    "        lambda x: concordance_index(x['efs_time'], -prds.loc[x.index], x['efs']), include_groups=False\n",
+    "    ).pipe(\n",
+    "        lambda x: float(x.mean() - x.std(ddof=0))\n",
+    "    )\n",
+    "def get_validation_splitter(validation_fraction):\n",
+    "    return lambda x: train_test_split(x, test_size = validation_fraction)\n",
+    "\n",
+    "config = {\n",
+    "    'predict_func': lambda m, df, X: pd.Series(m.predict(df[X]), index = df.index),\n",
+    "    'score_func': score,\n",
+    "    'validation_splitter': get_validation_splitter,\n",
+    "    'progress_callback': sgml.ProgressCallBack(), \n",
+    "    'return_train_scores': True,\n",
+    "    'y': 'naf',\n",
+    "}\n",
+    "\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state = 123)\n",
+    "ss = ShuffleSplit(n_splits=1, random_state = 123)\n",
+    "lgb_adapter = sgml.LGBMAdapter(lgb.LGBMRegressor)\n",
+    "xgb_adapter = sgml.XGBAdapter(xgb.XGBRegressor)\n",
+    "cb_adapter = sgml.CBAdapter(cb.CatBoostRegressor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe7bd65",
+   "metadata": {},
+   "source": [
+    "# LGB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c75ed91e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgb2 = sgml.CVModel('model', 'lgb2', kf, config, lgb_adapter).load_if_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1a9ec0ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {'num_leaves':  15, 'n_estimators':  3000, 'colsample_bytree': 0.25, 'learning_rate': 0.02},\n",
+    "    'X_num': X_tri + X_cont + X_int + X_na + X_bool, \n",
+    "    'X_cat': X_nom, 'cat': {'handle_unknown': 'use_encoded_value', 'unknown_value': -1},\n",
+    "    #'validation_fraction': 0.1\n",
+    "}\n",
+    "#result = lgb2.adhoc(df_train, ss, hparams)\n",
+    "result = lgb2.cv(df_train, hparams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ae40ec34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.6701505975227752,\n",
+       "  0.6580409512349454,\n",
+       "  0.669256522454466,\n",
+       "  0.6672902579835366,\n",
+       "  0.671588071264131,\n",
+       "  0.6751287789795556,\n",
+       "  0.6762450092215748,\n",
+       "  0.6661822745448618,\n",
+       "  0.6719850450163332,\n",
+       "  0.6597809108573061],\n",
+       " [0.7664814073102613,\n",
+       "  0.7660909785617896,\n",
+       "  0.7659540801742498,\n",
+       "  0.7655554532339128,\n",
+       "  0.7659232248855976,\n",
+       "  0.7651324943753222,\n",
+       "  0.7659994747628511,\n",
+       "  0.7653109285292482,\n",
+       "  0.7657546979084396,\n",
+       "  0.7656552531118537])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(result['valid_scores']), np.mean(result['train_scores'])#,result['model_result'][0]['valid_result'].idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c59b30ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6759646058725581"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(df_train, lgb2.cv_best_['prd'].sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d6f5be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
