--- a/kaggle/CIBMTR/phase3.ipynb
+++ b/kaggle/CIBMTR/phase3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b9b92a10",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
       "numpy 1.26.4\n",
       "pandas 2.2.3\n",
-      "polars 1.9.0\n",
-      "matplotlib 3.7.5\n",
-      "seaborn 0.12.2\n",
+      "polars 1.12.0\n",
+      "matplotlib 3.8.4\n",
+      "seaborn 0.13.2\n",
       "lifelines 0.30.0\n",
-      "sklearn 1.2.2\n",
-      "lightgbm 4.5.0\n",
-      "xgboost 2.0.3\n",
-      "catboost 1.2.7\n"
+      "sklearn 1.5.2\n",
+      "lightgbm\n",
+      "xgboost 2.1.2\n",
+      "catboost 1.2.5\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "089b6927",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "361fb548",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "['model/p2.joblib']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "9df6095a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9ddafa59",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "4ec4f07c",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "c75ed91e",
    "metadata": {},
    "outputs": [],
@@ -231,8 +231,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "1a9ec0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {'num_leaves':  15, 'n_estimators':  3000, 'colsample_bytree': 0.25, 'learning_rate': 0.02},\n",
+    "    'X_num': X_tri + X_cont + X_int + X_na + X_bool, \n",
+    "    'X_cat': X_nom, 'cat': {'handle_unknown': 'use_encoded_value', 'unknown_value': -1},\n",
+    "    #'validation_fraction': 0.1\n",
+    "}\n",
+    "#result = lgb2.adhoc(df_train, ss, hparams)\n",
+    "result = lgb2.cv(df_train, hparams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ae40ec34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6685648419079484, 0.7657857992853526)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(result['valid_scores']), np.mean(result['train_scores'])#,result['model_result'][0]['valid_result'].idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c59b30ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6759646058725581"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(df_train, lgb2.cv_best_['prd'].sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca7a555-444f-4d7f-90ec-d4c3f0750253",
+   "metadata": {},
+   "source": [
+    "## XGB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f569b1e1-e7e5-49c0-b733-7abdf1c2f310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb2 = sgml.CVModel('model', 'xgb2', kf, config, xgb_adapter).load_if_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "65e86301-142d-45ef-a30a-5087470896b2",
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +339,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sun9sun9/python312/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [01:50:49] WARNING: /workspace/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
+      "Potential solutions:\n",
+      "- Use a data structure that matches the device ordinal in the booster.\n",
+      "- Set the device for booster before call to inplace_predict.\n",
+      "\n",
+      "This warning will only be shown once.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
     },
     {
      "data": {
@@ -392,80 +483,238 @@
    ],
    "source": [
     "hparams = {\n",
-    "    'model_params': {'num_leaves':  15, 'n_estimators':  3000, 'colsample_bytree': 0.25, 'learning_rate': 0.02},\n",
-    "    'X_num': X_tri + X_cont + X_int + X_na + X_bool, \n",
-    "    'X_cat': X_nom, 'cat': {'handle_unknown': 'use_encoded_value', 'unknown_value': -1},\n",
-    "    #'validation_fraction': 0.1\n",
+    "    'model_params': {\n",
+    "        'max_depth': 3, 'colsample_bytree': 0.25, 'subsample': 0.9, 'n_estimators': 3000, 'learning_rate': 0.02\n",
+    "    },\n",
+    "    'X_num':  X_tri + X_cont + X_int + X_na + X_bool, 'X_cat': X_nom, 'cat': {'handle_unknown': 'ignore'},\n",
+    "    #'validation_fraction': 0.1,\n",
     "}\n",
-    "#result = lgb2.adhoc(df_train, ss, hparams)\n",
-    "result = lgb2.cv(df_train, hparams)"
+    "#result = xgb2.adhoc(df_train, ss, hparams, device = 'cuda')\n",
+    "result = xgb2.cv(df_train, hparams, device = 'cuda')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ae40ec34",
+   "execution_count": 15,
+   "id": "cd590784-0ee5-41d4-98cd-ff7b6953d8ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.6701505975227752,\n",
-       "  0.6580409512349454,\n",
-       "  0.669256522454466,\n",
-       "  0.6672902579835366,\n",
-       "  0.671588071264131,\n",
-       "  0.6751287789795556,\n",
-       "  0.6762450092215748,\n",
-       "  0.6661822745448618,\n",
-       "  0.6719850450163332,\n",
-       "  0.6597809108573061],\n",
-       " [0.7664814073102613,\n",
-       "  0.7660909785617896,\n",
-       "  0.7659540801742498,\n",
-       "  0.7655554532339128,\n",
-       "  0.7659232248855976,\n",
-       "  0.7651324943753222,\n",
-       "  0.7659994747628511,\n",
-       "  0.7653109285292482,\n",
-       "  0.7657546979084396,\n",
-       "  0.7656552531118537])"
+       "0.6674821562310559"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(result['valid_scores']), np.mean(result['train_scores'])#,result['model_result'][0]['valid_result'].idxmin()"
+    "np.mean(result['valid_scores'])#, result['model_result'][0]['valid_result'].idxmin()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "c59b30ab",
+   "execution_count": 16,
+   "id": "a2e7afbd-cf50-4e4f-9390-479e3a0154bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6759646058725581"
+       "0.6749431694153748"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score(df_train, lgb2.cv_best_['prd'].sort_index())"
+    "score(df_train, xgb2.cv_best_['prd'].sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89a0cbb-3de4-460d-a815-4cd4f3c52dd2",
+   "metadata": {},
+   "source": [
+    "## CB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b29f0467-d47e-4c5d-9e4d-dbf42048ab10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb2 = sgml.CVModel('model', 'cb2', kf, config, cb_adapter).load_if_exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "95c6cfc9-e5bb-435d-b864-550f7e70bd8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {\n",
+    "        'max_depth': 6, 'n_estimators': 3500, 'learning_rate': 0.03\n",
+    "    },\n",
+    "    'X_num':  X_tri + X_cont + X_int + X_na + X_bool, 'X_cat': X_nom\n",
+    "    #'validation_fraction': 0.1,\n",
+    "}\n",
+    "#result = cb2.adhoc(df_train, ss, hparams, task_type='GPU')\n",
+    "result = cb2.cv(df_train, hparams, task_type = 'GPU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "75e06be5-13a8-437f-a357-babbb26597a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6662575818186289"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(result['valid_scores'])#, result['model_result'][0]['valid_result'].idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a6926c2e-d9dc-4de3-977c-de805080b77b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6744258811913451"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(df_train, cb2.cv_best_['prd'].sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9f689632-6d10-43cd-a412-d69953bfc963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [lgb2, xgb2, cb2]\n",
+    "df_stk = sc.cache_result(\n",
+    "    'phase3_stk',\n",
+    "    lambda : sgml.stack_cv(models)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5e0c349f-3f0c-4c1a-a30f-caa53b5361fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6772404254003302"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(\n",
+    "    df_train,\n",
+    "    df_stk.sort_index()[['lgb2', 'xgb2', 'cb2']].dot([0.4, 0.3, 0.3])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4c448fb3-046b-4d38-81c5-e11546806605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i in models:\n",
+    "    if i.name.startswith('cb'):\n",
+    "        i.train(df_train, task_type = 'GPU')\n",
+    "    elif i.name.startswith('xgb'):\n",
+    "        i.train(df_train, device = 'cuda')\n",
+    "    else:\n",
+    "        i.train(df_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d6f5be",
+   "id": "e2d2b329-584d-476f-888f-34a67fd7ad67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -473,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -487,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
