--- a/kaggle/CIBMTR/phase2.ipynb
+++ b/kaggle/CIBMTR/phase2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "74121d47",
    "metadata": {},
    "outputs": [
@@ -10,56 +10,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lifelines\n",
-      "  Downloading lifelines-0.30.0-py3-none-any.whl.metadata (3.2 kB)\n",
-      "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.13.1)\n",
-      "Requirement already satisfied: pandas>=2.1 in /usr/local/lib/python3.10/dist-packages (from lifelines) (2.2.3)\n",
-      "Requirement already satisfied: matplotlib>=3.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (3.7.5)\n",
-      "Requirement already satisfied: autograd>=1.5 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.7.0)\n",
-      "Collecting autograd-gamma>=0.3 (from lifelines)\n",
-      "  Downloading autograd-gamma-0.5.0.tar.gz (4.0 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "Collecting formulaic>=0.2.2 (from lifelines)\n",
-      "  Downloading formulaic-1.1.1-py3-none-any.whl.metadata (6.9 kB)\n",
-      "Collecting interface-meta>=1.2.0 (from formulaic>=0.2.2->lifelines)\n",
-      "  Downloading interface_meta-1.3.0-py3-none-any.whl.metadata (6.7 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (4.12.2)\n",
-      "Requirement already satisfied: wrapt>=1.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (1.17.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (4.55.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (24.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (11.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (3.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (2.9.0.post0)\n",
-      "Requirement already satisfied: mkl_fft in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.3.8)\n",
-      "Requirement already satisfied: mkl_random in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.2.4)\n",
-      "Requirement already satisfied: mkl_umath in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (0.1.1)\n",
-      "Requirement already satisfied: mkl in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2025.0.1)\n",
-      "Requirement already satisfied: tbb4py in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2022.0.0)\n",
-      "Requirement already satisfied: mkl-service in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2.4.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n",
-      "Requirement already satisfied: intel-openmp>=2024 in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
-      "Requirement already satisfied: tbb==2022.* in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2022.0.0)\n",
-      "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.10/dist-packages (from tbb==2022.*->mkl->numpy>=1.14.0->lifelines) (1.2.0)\n",
-      "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.10/dist-packages (from mkl_umath->numpy>=1.14.0->lifelines) (2024.2.0)\n",
-      "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.10/dist-packages (from intel-openmp>=2024->mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
-      "Downloading lifelines-0.30.0-py3-none-any.whl (349 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m349.3/349.3 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading formulaic-1.1.1-py3-none-any.whl (115 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.7/115.7 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading interface_meta-1.3.0-py3-none-any.whl (14 kB)\n",
-      "Building wheels for collected packages: autograd-gamma\n",
-      "  Building wheel for autograd-gamma (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-      "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4031 sha256=d6093550fd34929faa4e0e35f11851d7805ba299a4d8f35028531c3d4c6bf5af\n",
-      "  Stored in directory: /root/.cache/pip/wheels/25/cc/e0/ef2969164144c899fedb22b338f6703e2b9cf46eeebf254991\n",
-      "Successfully built autograd-gamma\n",
-      "Installing collected packages: interface-meta, formulaic, autograd-gamma, lifelines\n",
-      "Successfully installed autograd-gamma-0.5.0 formulaic-1.1.1 interface-meta-1.3.0 lifelines-0.30.0\n"
+      "Requirement already satisfied: lifelines in /home/sun9sun9/python312/lib/python3.12/site-packages (0.30.0)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.7.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (1.12.0)\n",
+      "Requirement already satisfied: pandas>=2.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib>=3.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (3.8.4)\n",
+      "Requirement already satisfied: autograd>=1.5 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (1.7.0)\n",
+      "Requirement already satisfied: autograd-gamma>=0.3 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (0.5.0)\n",
+      "Requirement already satisfied: formulaic>=0.2.2 in /home/sun9sun9/python312/lib/python3.12/site-packages (from lifelines) (1.1.1)\n",
+      "Requirement already satisfied: interface-meta>=1.2.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from formulaic>=0.2.2->lifelines) (1.3.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from formulaic>=0.2.2->lifelines) (4.11.0)\n",
+      "Requirement already satisfied: wrapt>=1.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from formulaic>=0.2.2->lifelines) (1.16.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (24.0)\n",
+      "Requirement already satisfied: pillow>=8 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (10.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (3.1.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/sun9sun9/python312/lib/python3.12/site-packages (from matplotlib>=3.0->lifelines) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from pandas>=2.1->lifelines) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/sun9sun9/python312/lib/python3.12/site-packages (from pandas>=2.1->lifelines) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in /home/sun9sun9/python312/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -69,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3e24ce55-92b8-4d40-9c5f-bb80abbf7f38",
    "metadata": {},
    "outputs": [
@@ -77,17 +52,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
       "numpy 1.26.4\n",
       "pandas 2.2.3\n",
-      "polars 1.9.0\n",
-      "matplotlib 3.7.5\n",
-      "seaborn 0.12.2\n",
+      "polars 1.12.0\n",
+      "matplotlib 3.8.4\n",
+      "seaborn 0.13.2\n",
       "lifelines 0.30.0\n",
-      "sklearn 1.2.2\n",
-      "lightgbm 4.5.0\n",
-      "xgboost 2.0.3\n",
-      "catboost 1.2.7\n"
+      "sklearn 1.5.2\n",
+      "lightgbm\n",
+      "xgboost 2.1.2\n",
+      "catboost 1.2.5\n"
      ]
     }
    ],
@@ -123,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fdef71f3",
    "metadata": {},
    "outputs": [],
@@ -137,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cca73ad3-b7b5-45b4-8fbf-63fb41b9a0c3",
    "metadata": {},
    "outputs": [
@@ -147,7 +122,7 @@
        "['model/p2.joblib']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2f5aa4c0",
    "metadata": {},
    "outputs": [],
@@ -216,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ed0ad64a",
    "metadata": {},
    "outputs": [],
@@ -249,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7867b404",
    "metadata": {},
    "outputs": [],
@@ -289,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9cbcd618",
    "metadata": {},
    "outputs": [],
@@ -299,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "8644f3fb",
    "metadata": {},
    "outputs": [],
@@ -316,7 +291,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
+   "id": "d7a8fed5-fc0f-41c8-8fc9-4302d90086a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.666239317894867"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(result['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "6e5f6a7b",
    "metadata": {},
    "outputs": [
@@ -326,7 +322,7 @@
        "0.6734179596864021"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e9ed7fdf",
    "metadata": {},
    "outputs": [],
@@ -355,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "1c425083",
    "metadata": {},
    "outputs": [],
    "source": [
     "hparams = {\n",
     "    'model_params': {\n",
-    "        'max_depth': 3, 'colsample_bytree': 0.25, 'subsample': 0.9, 'n_estimators': 3000, 'learning_rate': 0.02\n",
+    "        'max_depth': 3, 'colsample_bytree': 0.5, 'subsample': 0.8, 'n_estimators': 2000, 'learning_rate': 0.02, 'min_child_weight':  80\n",
     "    },\n",
     "    'X_num':  X_tri + X_cont + X_int + X_na + X_bool, 'X_cat': X_nom, 'cat': {'handle_unknown': 'ignore'},\n",
     "    #'validation_fraction': 0.1,\n",
@@ -373,17 +369,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
+   "id": "43a1160b-c638-499e-8b02-22a1346bd962",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.665205354683022"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(result['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "f92e8c43",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6728535728965033"
+       "0.6724051710595899"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d02b3971",
    "metadata": {},
    "outputs": [],
@@ -412,25 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "bd97da53",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fold:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hparams = {\n",
     "    'model_params': {\n",
@@ -445,17 +447,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "31f13555",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6641486236670436"
+       "0.6642239819854309"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,17 +468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "e9ee6e79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6721180385899219"
+       "0.672219746515295"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,12 +547,22 @@
    "id": "ef50682e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hparams = {\n",
+    "    'model_params': {\n",
+    "        'max_depth': 6, 'n_estimators': 3500, 'learning_rate': 0.03\n",
+    "    },\n",
+    "    'X_num':  X_tri + X_cont + X_int + X_na + X_bool, 'X_cat': X_nom\n",
+    "    #'validation_fraction': 0.1,\n",
+    "}\n",
+    "#result = cb1.adhoc(df_train, ss, hparams, task_type='GPU')\n",
+    "result = cb1.cv(df_train, hparams, task_type = 'GPU')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -564,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
