--- a/kaggle/CIBMTR/1.EDA.ipynb
+++ b/kaggle/CIBMTR/1.EDA.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "76bf06ba-e841-4e45-bf77-94fb4d67f62f",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
     "    sgpp.ApplyWrapper(sgpp.CatArrangerFreq(1, 'na', 'na'), X_nom_na),\n",
     "    sgpp.ApplyWrapper(sgpp.CatOOVFilter(), X_nom_nna),\n",
     ")\n",
-    "df_train = p1.fit_transform([os.path.join(data_path, 'train.csv']))"
+    "df_train = p1.fit_transform([os.path.join(data_path, 'train.csv')])"
    ]
   },
   {
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "251c4c3f-e2a8-4896-8402-54876cddd869",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b0683e802114abb9a21770e4e467054",
+       "model_id": "cb0bd6e1bc7841d4a938b030e5a13533",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2151,7 +2151,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8373568213852252"
+       "0.13545429563939837"
       ]
      },
      "execution_count": 36,
@@ -2175,11 +2175,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a31ce091-1ace-41b9-afda-fa726c2bcf70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2193,7 +2201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
