--- a/kaggle/PGS4/PGS4_ep11/2.machine learning.ipynb
+++ b/kaggle/PGS4/PGS4_ep11/2.machine learning.ipynb
@@ -6630,7 +6630,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6644,7 +6644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
