--- a/kaggle/PGS5/PGS5_ep3/3.Feature Selection2.ipynb
+++ b/kaggle/PGS5/PGS5_ep3/3.Feature Selection2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "68dc3777-db35-4ef7-9414-51dd1cc521e3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "6546a489-5524-4234-b120-313a4fa8884d",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "58"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "5e24adc6-d10d-4c96-b7bd-6ece08717a9d",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "37fa8372-380c-4e8f-b7ec-243181979ba5",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "dbcc1b0a-bb35-43be-816d-abfa4748c7e4",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        " 'humidity_ma24']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "2da3dfca-f366-4900-97c3-41941cad583a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1cb377756c34f43b293d701ac1b8ef6",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,10 +183,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.8989646464646466, 0.9203205667789)"
+       "(0.8991638608305275, 0.9204527918069585)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "bf32754b-03f5-4794-9c00-cc3e9e33f021",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "fa7322ca-5766-4c89-ac8e-0e7bc1356b7f",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        " 'humidity_ma24']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "4756cd65-f10b-446e-b234-e6074dd8240d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "455bd977663b4e43b6bb01a730581159",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,10 +280,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.8989674523007857, 0.9204843574635241)"
+       "(0.8990375982042649, 0.9203475729517396)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "0e1dc03b-2647-4133-a4ee-47e485ec67dc",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "a71ab7b8-754e-48ba-a95a-bc3a89ef20bf",
    "metadata": {},
    "outputs": [
@@ -318,25 +318,39 @@
       "text/plain": [
        "['sin_ed',\n",
        " 'pressure',\n",
+       " 'temparature',\n",
        " 'mintemp',\n",
+       " 'cloud',\n",
        " 'sunshine',\n",
        " 'windspeed',\n",
+       " 'sin_wd',\n",
        " 'chp',\n",
        " 'sunshine_5',\n",
        " 'cloud_3',\n",
+       " 'cloud_5',\n",
+       " 'cloud_6',\n",
+       " 'dewpoint_1',\n",
        " 'dewpoint_2',\n",
+       " 'dewpoint_5',\n",
        " 'chp_2',\n",
        " 'chp_3',\n",
-       " 'chp_4',\n",
-       " 'chp_6',\n",
        " 'cos_wd_1',\n",
+       " 'cos_wd_2',\n",
        " 'cos_wd_4',\n",
+       " 'sin_wd_1',\n",
+       " 'sin_wd_2',\n",
+       " 'sin_wd_6',\n",
+       " 'temparature_ma24',\n",
+       " 'mintemp_ma24',\n",
        " 'dewpoint_ma24',\n",
-       " 'humidity_ma24',\n",
-       " 'year']"
+       " 'cloud_ma24',\n",
+       " 'sunshine_ma24',\n",
+       " 'sin_wd_ma24',\n",
+       " 'chp_ma24',\n",
+       " 'winddirection']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "e5a47fc0-e530-4908-b9db-1feeaf41b05f",
    "metadata": {},
    "outputs": [
@@ -366,30 +380,47 @@
      "data": {
       "text/plain": [
        "['sin_ed',\n",
-       " 'maxtemp',\n",
+       " 'pressure',\n",
+       " 'temparature',\n",
        " 'mintemp',\n",
-       " 'dewpoint',\n",
+       " 'cloud',\n",
        " 'sunshine',\n",
        " 'windspeed',\n",
+       " 'sin_wd',\n",
        " 'chp',\n",
+       " 'sunshine_5',\n",
        " 'cloud_3',\n",
+       " 'cloud_5',\n",
+       " 'cloud_6',\n",
+       " 'dewpoint_1',\n",
+       " 'dewpoint_2',\n",
        " 'dewpoint_5',\n",
+       " 'chp_2',\n",
        " 'chp_3',\n",
        " 'cos_wd_1',\n",
+       " 'cos_wd_2',\n",
+       " 'cos_wd_4',\n",
+       " 'sin_wd_1',\n",
+       " 'sin_wd_2',\n",
+       " 'sin_wd_6',\n",
        " 'temparature_ma24',\n",
        " 'mintemp_ma24',\n",
        " 'dewpoint_ma24',\n",
-       " 'cloud_ma24']"
+       " 'cloud_ma24',\n",
+       " 'sunshine_ma24',\n",
+       " 'sin_wd_ma24',\n",
+       " 'chp_ma24',\n",
+       " 'winddirection']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hparams = {\n",
-    "    'model_params': {'max_depth': 2, 'n_estimators': 150, 'colsample_bytree': 0.5, 'learning_rate': 0.03},\n",
+    "    'model_params': {'max_depth': 2, 'n_estimators': 200, 'colsample_bytree': 0.5, 'learning_rate': 0.03},\n",
     "    'X_num': X_all\n",
     "}\n",
     "sfs = sc.cache_result(\n",
@@ -403,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "id": "43a9a070-e8c1-4826-a7c1-ea28d1478063",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fae0f4c15fd4d16be6c94d3756c8db9",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,10 +455,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.8979966329966329, 0.9218422067901235)"
+       "(0.8976711560044894, 0.9219355008417509)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
